unpackaged/main/default/objects/PCSM_Visit_Cyc__c/PCSM_Visit_Cyc__c.object-meta.xml
<CustomObject>
    <description>Products &amp; Services including SDM scheduled visits, Executive Response engagements</description>
    <label>Products &amp; Services</label>
    <nameField>
        <displayFormat>P-{0000}</displayFormat>
        <label>Visit Cycle</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Products &amp; Services</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>