unpackaged/main/default/objects/PCSM_Visit_Cyc__c/fields/Approximate_Upgrade_Date__c.field-meta.xml
<CustomField>
    <fullName>Approximate_Upgrade_Date__c</fullName>
    <label>Approximate Upgrade Date</label>
    <type>Date</type>
</CustomField>