unpackaged/main/default/objects/PCSM_Visit_Cyc__c/fields/At_Risk_Amount__c.field-meta.xml
<CustomField>
    <fullName>At_Risk_Amount__c</fullName>
    <description>For use by the Executive Response team to capture the at risk amount</description>
    <label>At Risk Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>