unpackaged/main/default/objects/PCSM_Visit_Cyc__c/fields/At_Risk_Reason__c.field-meta.xml
<CustomField>
    <fullName>At_Risk_Reason__c</fullName>
    <description>For use by the Executive Response team to capture the reasoning behind the at risk amount</description>
    <inlineHelpText>Reason for At Risk Amount</inlineHelpText>
    <label>At Risk Reason</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>