unpackaged/main/default/objects/PCSM_Visit_Cyc__c/fields/Benefit_Amount__c.field-meta.xml
<CustomField>
    <fullName>Benefit_Amount__c</fullName>
    <description>For use by the Executive Response team to capture the benefit amount raised as a result of the engagement</description>
    <inlineHelpText>Benefits / opportunities raised as a result of this engagement / service</inlineHelpText>
    <label>Benefit Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>