unpackaged/main/default/objects/PCSM_Visit_Cyc__c/fields/Benefit_Reason__c.field-meta.xml
<CustomField>
    <fullName>Benefit_Reason__c</fullName>
    <description>For use by Executive Response team to capture the reasoning behind the benefit amount</description>
    <inlineHelpText>Reason for Benefit Amount</inlineHelpText>
    <label>Benefit Reason</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>