unpackaged/main/default/objects/PCSM_Visit_Cyc__c/fields/Current_Release__c.field-meta.xml
<CustomField>
    <fullName>Current_Release__c</fullName>
    <label>Current Release</label>
    <length>30</length>
    <type>Text</type>
</CustomField>