unpackaged/main/default/objects/PCSM_Visit_Cyc__c/fields/Elapsed_Days__c.field-meta.xml
<CustomField>
    <fullName>Elapsed_Days__c</fullName>
    <description>Elapsed days between Start Date and End Date, or Start Date and Today</description>
    <formula>IF (ISBLANK(End_Date__c), TODAY() - Start_Date__c, End_Date__c - Start_Date__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Elapsed days between Start Date and End Date (if applicable), or Start Date and Today.</inlineHelpText>
    <label>Elapsed Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>