unpackaged/main/default/objects/PCSM_Visit_Cyc__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>End date of the engagement / service</description>
    <inlineHelpText>End date of the engagement / service</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>