unpackaged/main/default/objects/PCSM_Visit_Cyc__c/fields/Engagement_Type__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Type__c</fullName>
    <description>For use by the Executive Response team and Customer Success team to capture the type of engagement</description>
    <inlineHelpText>Executive Response or Customer Success Engagement Type</inlineHelpText>
    <label>Engagement Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Executive Engagement</fullName>
            </value>
            <value>
                <fullName>Remediation Program</fullName>
            </value>
            <value>
                <fullName>Debtors Management</fullName>
            </value>
            <value>
                <fullName>Product Reviews</fullName>
            </value>
            <value>
                <fullName>High Touch Customer Success</fullName>
            </value>
            <value>
                <fullName>Low Touch Customer Success</fullName>
            </value>
            <value>
                <fullName>Tech Touch Customer Success</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>