unpackaged/main/default/objects/PCSM_Visit_Cyc__c/fields/Executive_Sponsor__c.field-meta.xml
<CustomField>
    <fullName>Executive_Sponsor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Executive Sponsor for the Executive Response Engagement</inlineHelpText>
    <label>Executive Sponsor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Products_Services</relationshipName>
    <type>Lookup</type>
</CustomField>