unpackaged/main/default/objects/PCSM_Visit_Cyc__c/fields/Frequency__c.field-meta.xml
<CustomField>
    <fullName>Frequency__c</fullName>
    <label>Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Weekly</fullName>
            </value>
            <value>
                <fullName>Fortnightly</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Bi Monthly</fullName>
            </value>
            <value>
                <fullName>3 Monthly</fullName>
            </value>
            <value>
                <fullName>4 Monthly</fullName>
            </value>
            <value>
                <fullName>6 Monthly</fullName>
            </value>
            <value>
                <fullName>Annual</fullName>
            </value>
            <value>
                <fullName>Ad-hoc</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>