unpackaged/main/default/objects/PCSM_Visit_Cyc__c/fields/Licence_Model__c.field-meta.xml
<CustomField>
    <fullName>Licence_Model__c</fullName>
    <label>Licence Model</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cloud</fullName>
            </value>
            <value>
                <fullName>SaaS</fullName>
            </value>
            <value>
                <fullName>Subscription</fullName>
            </value>
            <value>
                <fullName>Spatial Cloud</fullName>
            </value>
            <value>
                <fullName>Spatial SaaS</fullName>
            </value>
            <value>
                <fullName>Perpetual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>