unpackaged/main/default/objects/PCSM_Visit_Cyc__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <description>Products list from SRS ASMs Modules</description>
    <label>Product</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Additional Cloud - Different Anniversary Date</fullName>
            </value>
            <value>
                <fullName>Application Managed Services</fullName>
            </value>
            <value>
                <fullName>Customer Success</fullName>
            </value>
            <value>
                <fullName>EmpLive</fullName>
            </value>
            <value>
                <fullName>Escrow</fullName>
            </value>
            <value>
                <fullName>Executive Response</fullName>
            </value>
            <value>
                <fullName>Health Metrics</fullName>
            </value>
            <value>
                <fullName>IT Glovebox</fullName>
            </value>
            <value>
                <fullName>Kofax Capture</fullName>
            </value>
            <value>
                <fullName>My Recruit Online</fullName>
            </value>
            <value>
                <fullName>Roster Live</fullName>
            </value>
            <value>
                <fullName>ScanWatcher</fullName>
            </value>
            <value>
                <fullName>Tanda</fullName>
            </value>
            <value>
                <fullName>TechnologyOne Adaptive Solutions</fullName>
            </value>
            <value>
                <fullName>TechnologyOne Additional Breakout Packs</fullName>
            </value>
            <value>
                <fullName>TechnologyOne ADF</fullName>
            </value>
            <value>
                <fullName>TechnologyOne Application Submission Management</fullName>
            </value>
            <value>
                <fullName>TechnologyOne Breakout Packs</fullName>
            </value>
            <value>
                <fullName>TechnologyOne Business Process Management</fullName>
            </value>
            <value>
                <fullName>TechnologyOne Cloud Storage (ECM)</fullName>
            </value>
            <value>
                <fullName>TechnologyOne Community Consultation (Local Govt)</fullName>
            </value>
            <value>
                <fullName>TechnologyOne Community Consultation &amp; Engagement</fullName>
            </value>
            <value>
                <fullName>TechnologyOne Community Engagement</fullName>
            </value>
            <value>
                <fullName>Technology One Contracts</fullName>
            </value>
            <value>
                <fullName>TechnologyOne Corporate Performance Management</fullName>
            </value>
            <value>
                <fullName>TechnologyOne CPM External Systems Connectors</fullName>
            </value>
            <value>
                <fullName>TechnologyOne Custom Stakeholder Management</fullName>
            </value>
            <value>
                <fullName>TechnologyOne ECM</fullName>
            </value>
            <value>
                <fullName>TechnologyOne ECR External Systems</fullName>
            </value>
            <value>
                <fullName>TechnologyOne Enterprise Asset Management</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>