unpackaged/main/default/objects/PCSM_Visit_Cyc__c/fields/Product_Cancelled__c.field-meta.xml
<CustomField>
    <fullName>Product_Cancelled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Product Cancelled</label>
    <type>Checkbox</type>
</CustomField>