unpackaged/main/default/objects/PCSM_Visit_Cyc__c/fields/Product_s__c.field-meta.xml
<CustomField>
    <fullName>Product_s__c</fullName>
    <description>For use by the Executive Response team</description>
    <inlineHelpText>Product/s relating to the engagement / service</inlineHelpText>
    <label>Product/s</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Consulting_Services_Products</valueSetName>
    </valueSet>
</CustomField>