unpackaged/main/default/objects/PCSM_Visit_Cyc__c/fields/Rating_Reason__c.field-meta.xml
<CustomField>
    <fullName>Rating_Reason__c</fullName>
    <label>Rating Reason</label>
    <type>TextArea</type>
</CustomField>