unpackaged/main/default/objects/PCSM_Visit_Cyc__c/fields/Remediation_Cost__c.field-meta.xml
<CustomField>
    <fullName>Remediation_Cost__c</fullName>
    <description>For use by the Executive Response Team to capture remediation cost of the engagement</description>
    <inlineHelpText>Remediation cost of the engagement</inlineHelpText>
    <label>Remediation Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>