unpackaged/main/default/objects/PCSM_Visit_Cyc__c/fields/Solution__c.field-meta.xml
<CustomField>
    <fullName>Solution__c</fullName>
    <description>Solution as per Account</description>
    <formula>TEXT(Account__r.Solution__c)</formula>
    <inlineHelpText>Solution as per Account</inlineHelpText>
    <label>Solution</label>
    <type>Text</type>
</CustomField>