unpackaged/main/default/objects/PCSM_Visit_Cyc__c/fields/SRS_Product_code__c.field-meta.xml
<CustomField>
    <fullName>SRS_Product_code__c</fullName>
    <label>SRS Product Code</label>
    <length>30</length>
    <type>Text</type>
</CustomField>