unpackaged/main/default/objects/PCSM_Visit_Cyc__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>Start date of the engagement / service</description>
    <inlineHelpText>Start date of the engagement / service</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>