unpackaged/main/default/objects/PCSM_Visit_Cyc__c/fields/Survey_1__c.field-meta.xml
<CustomField>
    <fullName>Survey_1__c</fullName>
    <label>Survey 1</label>
    <type>DateTime</type>
</CustomField>