unpackaged/main/default/objects/PCSM_Visit_Cyc__c/fields/Survey_2__c.field-meta.xml
<CustomField>
    <fullName>Survey_2__c</fullName>
    <label>Survey 2</label>
    <type>DateTime</type>
</CustomField>