unpackaged/main/default/objects/PCSM_Visit_Cyc__c/fields/Target_Date__c.field-meta.xml
<CustomField>
    <fullName>Target_Date__c</fullName>
    <description>Target end date of engagement / service</description>
    <inlineHelpText>Target end date of engagement / service</inlineHelpText>
    <label>Target Date</label>
    <type>Date</type>
</CustomField>